# Topdo

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: 01_安装说明.txt  FAQ.md  FEISHU_SETUP.md  GETTING_STARTED.md  PRIVACY.md  SUPPORT.md
docs/images/: README.md
scripts/: build_universal_dmg.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-backup/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/capture/: QuickCapture.vue
src/components/: CheckInSuccess.vue  ConfirmDialog.vue  CreateHabitModal.vue  HabitCard.vue  HabitDetailModal.vue  Icon.vue  KbdShortcut.vue  ModeDropdown.vue  OnboardingBar.vue  QuickInput.vue  RecurrencePanel.vue  ReminderSelect.vue  SegmentedControl.vue  Settings.vue  ShortcutSheet.vue  StatsBar.vue  StatsPanel.vue  StatusBar.vue  TaskItem.vue  TaskList.vue  TitleBar.vue  Welcome.vue
src/components/ui/: BarChart.vue  ChipSelector.vue  StatCard.vue
src/menubar/: MenuBarPanel.vue
src/services/: exportService.ts
src/stores/: appStore.ts  habitStore.ts  taskStore.ts
src/styles/: main.css
src/types/: habit.ts  index.ts
src/utils/: dueDate.ts  keyboard.ts  logger.ts  recurrence.ts  reminder.ts  theme.ts
src/views/: HabitView.vue
