[package]
name = "topdo"
version = "0.1.0"
description = "A macOS floating window app for today's tasks"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "task_float_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
whoami = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
